--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f71a05c5550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6d60e39990&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f71a0290b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f71a0290d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6d6125fd90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6d61253a90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f71a0838510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f71a0838710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6d617fa3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6d618044d0&gt;]</pre>
 </div>
 
 </div>
