--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f01eef94450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5a7c890510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f01ee918b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f01ee918d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a7b9e2dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5a7b9e2fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f01eeeba550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f01eeeba750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a7bfa16d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5a7bfa1910&gt;]</pre>
 </div>
 
 </div>
