--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f40434a9590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7e025c8a50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4042e60c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4042e60e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e0260bc90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7e0260be90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4043403590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4043403790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e02bb4590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7e02bb4790&gt;]</pre>
 </div>
 
 </div>
