--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb39d8b1090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd19ab91690&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb39d543d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb39d543f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd19a867d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd19a867f90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb39db32750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb39dae5810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd19ae0f650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd19ae0f850&gt;]</pre>
 </div>
 
 </div>
