--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4e6ba822d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6afe792e10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e6b751d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4e6b751f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6af967ced0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6af9c49110&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e6bcf6650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4e6bcf6850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6af9c22810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6af9c22a10&gt;]</pre>
 </div>
 
 </div>
