--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff102344d10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd6f8ec4390&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff102008910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff102013e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6f8be1a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd6f8bf4e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1025ac290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff1025b7790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd6f918a410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd6f9194850&gt;]</pre>
 </div>
 
 </div>
