--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f925602c510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff63eb36650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9255198d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9255198f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff63e2e4190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff63e2e4390&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f925573f610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f925573f810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff63e2bca90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff63e2bcc90&gt;]</pre>
 </div>
 
 </div>
