--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fddb4bc5310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2b75c609d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fddb4591c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fddb4591e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b75931a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2b75931cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fddb4b35550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fddb4b35750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b75ed3450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2b75ed3690&gt;]</pre>
 </div>
 
 </div>
