--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f23cf3a5a50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa5e164e910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f23c947dc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f23c947de50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa5e137ec50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa5e137ee10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f23c9a23690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f23c9a23850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa5e19235d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa5e1923790&gt;]</pre>
 </div>
 
 </div>
