--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe1eb02ac10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffac3938610&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe1ea9b3bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe1ea9b3dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffac3984c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffac3984e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe1eaf5b550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe1eaf5b750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffac3f2b550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffac3f2b750&gt;]</pre>
 </div>
 
 </div>
