--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffac3938610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f335de464d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffac3984c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffac3984e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f335cf78b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f335cf78d50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffac3f2b550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffac3f2b750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f335d51c450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f335d51c650&gt;]</pre>
 </div>
 
 </div>
