--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f81d16db850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe06ba7b090&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f81d1099c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f81d1099e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe06b412750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe06b437bd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f81d1640550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f81d1640790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe06b9cb110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe06b9d7590&gt;]</pre>
 </div>
 
 </div>
