--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f376ae25110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2945aa1b50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f376aab1f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f376aab41d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f29454b8cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2945774fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f376b065850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f376b065a50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2945d98210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2945d42990&gt;]</pre>
 </div>
 
 </div>
