--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f92ccaf80d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd63699ef10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f92cc7f6210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f92cc7f6410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd63666ce90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd63668a0d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f92ccd96950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f92ccd96b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd636c36750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd636c36950&gt;]</pre>
 </div>
 
 </div>
