--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd63699ef10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f93c001d2d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd63666ce90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd63668a0d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f93bfd0c690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f93bfd0c4d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd636c36750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd636c36950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f93c02bc750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f93c02bc950&gt;]</pre>
 </div>
 
 </div>
