--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa0ac9a4a10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb7dede9a10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0ac69ccd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa0ac695110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb7deaa2c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb7deaa2e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0acc457d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa0acc459d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb7df06c590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb7df06c790&gt;]</pre>
 </div>
 
 </div>
