--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fee32b0f4d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f92609758d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee327ece10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee327ecfd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f926062cf10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9260648150&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee32dae750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee32dae950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9260bf6890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9260bf6a90&gt;]</pre>
 </div>
 
 </div>
